[gd_scene load_steps=3 format=3 uid="uid://4hryb5cbh2nx"]

[ext_resource type="Script" path="res://scenes/game/heat_grid.gd" id="1_w6hx5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bxihs"]

[node name="heat_cell" type="Node2D" groups=["HeatCells"]]
script = ExtResource("1_w6hx5")
conductivity = 0.2
heat_per_smoke = 8.0
heat_loss = 0.1
environment_temp = 20.0
grid_trans = 3

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.580392, 0, 1)

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -14.0
offset_right = 20.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "K"

[node name="Tick" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_bxihs")

[connection signal="timeout" from="Tick" to="." method="_on_tick_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
